<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="card1">Card 1</string>
    <string name="card2">Card 2</string>
    <string name="card3">Card 3</string>
    <string name="display1">Display 1</string>
    <string name="display2">Display 2</string>
    <string name="emptyString"></string>
    <string name="sendMessage">Send</string>
    <string name="score">Score</string>
    <string name="player1Label">Player 1:</string>
    <string name="player2Label">Player 2:</string>
    <string name="playersLabel">Players</string>
    <string name="playersCardsRemaining">Cards Left</string>
    <string name="player1CardsLeft">0</string>
    <string name="player2CardsLeft">0</string>
    <string name="warCard1">War Card 1</string>
    <string name="warCard2">War Card 2</string>
    <string name="warButton">War</string>

    <string name="submit">"Submit"</string>
    <string name="history">"History"</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="registering">Registering</string>


    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>