<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.batest39.myfirstapplication.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="147dp"
        android:layout_height="299dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/inputText"
        android:layout_width="67dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyString"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.991" />

    <Button
        android:id="@+id/button"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sendMessage"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/inputText"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.991" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="172dp"
        android:layout_height="82dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018">

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/player2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player2Label"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player2CardsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player2CardsLeft"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player1CardsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player1CardsLeft"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/player1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player1Label"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/playersCardsRemaining"
        android:layout_width="70dp"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/playersCardsRemaining"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/playersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/playersLabel"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="382dp"
        android:layout_height="127dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/warButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/warButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/warCard2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/warCard1"
            android:layout_width="115dp"
            android:layout_height="85dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/warCard1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/c1" />

        <ImageView
            android:id="@+id/warCard2"
            android:layout_width="115dp"
            android:layout_height="85dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/warCard2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/warCard1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/c1" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/card1"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/card1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/c1" />

    <ImageView
        android:id="@+id/display1"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/c1" />

    <ImageView
        android:id="@+id/display2"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/display1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/c1" />

    <ImageView
        android:id="@+id/card2"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/card2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:srcCompat="@drawable/c1" />

    <ImageView
        android:id="@+id/card3"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/card3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/display2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/c1" />

</android.support.constraint.ConstraintLayout>
